@@ -170,5 +170,10 @@ DOMAIN_STATE(struct caml_exception_context*, external_raise)
 DOMAIN_STATE(struct memprof_domain_s *, memprof)
 DOMAIN_STATE(value *, memprof_young_trigger)
 
+#ifdef _WIN32
+DOMAIN_STATE(void * /* HANDLE */, timer)
+/* high-resolution timer used for sleeping */
+#endif
+
 DOMAIN_STATE(extra_params_area, extra_params)
 /* This member must occur last, because it is an array, not a scalar */
