@@ -49,6 +49,10 @@ Working version
 - #13354: Use C99 flexible array member syntax everywhere.
   (Antonin Décimo, review by Miod Vallat, Gabriel Scherer, and Xavier Leroy)
 
+- #?????: Use sub-millisecond precision for spin-waits and sleeping on
+  Windows.
+  (Antonin Décimo, Samuel Hym, review by ???)
+
 ### Code generation and optimizations:
 
 - #13565: less tagging in switches compiled to affine transformations
